<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.matrix</groupId>
    <artifactId>gdmatrix-ws</artifactId>
    <version>3.0</version>
  </parent>  
  <name>gdmatrix-ws-security-ri</name>
  <groupId>org.matrix</groupId>
  <artifactId>gdmatrix-ws-security-ri</artifactId>
  <version>3.0</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-ws-common</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>
    <description>GDMatrix security module web services reference implementation</description>
</project>